swagger documentation now working
